src/index.css
:root {
  --fs-900: 3rem;
  --fs-600: 1.9rem;
  --fs-400: .98rem;
  --slide-in-speed: .8s;
}

@media(min-width: 35em) {
  :root {
    --fs-900: 3.3rem;
    --fs-600: 2.1rem;
    --fs-400: 1rem;
  }
}

@media(min-width: 60em) {
  :root {
    --fs-900: 3.6rem;
    --fs-600: 2.2rem;
    --fs-400: 1.03rem;
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
  font: inherit;
}

ul {
  list-style: none;
  padding: 0;
}

html:focus-within {
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  font-family: 'Poppins', sans-serif;
  overflow-x: hidden;
}

a {
  text-decoration-skip-ink: auto;
  text-decoration: none;
  color: currentColor;
  display: inline-block;
}

img,
picture,
svg,
video {
  max-width: 100%;
  display: block;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input {
  width: 100%;
}

@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

.container {
  width: min(90%, 80em);
  margin-inline: auto;
}

.flex {
  display: flex;
  gap: var(--gap, 1rem);
}

.flow>*+* {
  margin-top: var(--flow-space, 1rem);
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

.text-center {
  text-align: center;
}

.mx-auto {
  margin-inline: auto;
}

.fs-900 {
  font-size: var(--fs-900);
}

.fs-600 {
  font-size: var(--fs-600);
}

.fs-400 {
  font-size: var(--fs-400);
}

.fw-700 {
  font-weight: 700;
}

.fw-600 {
  font-weight: 600;
}

.fw-500 {
  font-weight: 500;
}

.fw-400 {
  font-weight: 400;
}

.btn {
  cursor: pointer;
  padding: 1em;
  background-color: #000;
  border: 0;
  border-radius: .35rem;
  color: #fff;
}

.btn,
.btn strong,
.btn span {
  transition: .25s ease;
}

.btn strong {
  background: linear-gradient(to right, #a690d7 0%, #e1919b 19%, #ffffff 40%, #ffffff 60%, #a690d7 83%, #e88997 100%);
  background-position: -100px;
  background-size: 300%;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.btn:hover strong {
  background-position: 0;
}

.btn:hover span {
  color: #fff;
}

.btn>span {
  color: #909090;
}

.link:hover {
  text-decoration: underline;
}

p {
  max-width: 60ch;
}

.title {
  line-height: 1.3em;
}

